20091110:
- fix SIGINT hanging when input is idle
- several IPv6 fixes
- compile for 64 bit by default if available

20091012:
- hash calculation is faster if done in a separate thread
- new option --hash to select other algorithms of libmhash than md5
- omit creation of superfluous inputThread in absence of status output
- fix potential race condition during startup in high watermark code
  [reported by Michal Soltys]
- reduce number of semaphore calls in high watermark code
- fix a potential deadlock on SIGINT
- fixed a typo in watermark example

20090628:
- added IPv6 support
- added support for port name lookup
- added another verbosity level for I/O messages
- refix libmhash initialization

20090215:
- fix status thread hang on very small transfer sizes
- fix libmhash initialization
- -q should not suppress output of -H
- reduced termination latency with status display running
- update for summary display
- changed default shell make shell to /bin/sh

20090113:
- fix for assertion failure of 64bit binaries in network code

20090106:
- BSD compatibility update
- replace use of deprecated atoi with strtol
- better argument checking for numeric options
- enhanced semaphore limits checking
- add phony targets

20081207:
- fixed some typos in man page
- TCP buffer tuning could be a little bit more intelligent
- fixed formating of some info messages
- tuneable TCP buffer with option --tcpbuffer

20081113:
- tune send and receive buffer of TCP stack to match block size
- added target check to Makefile
- fix: don't mix up file during open
- code cleanup/unification for MD5
- sendfile should also be used for writing to files
- sync cleanup on output thread instead of input thread
- fix: access to dest_t after free()
- unified summary and join between verbose and silent mode
- minor code cleanups

20081023:
- mbuffer should not abort on SIGTERM
- mbuffer should not segv on invalid arguments for options -m, -s